ISP20211065 - [Mockup Oven] 調整

--- a/Quality/Quality/Areas/BulkFGT/Views/MockupOvenTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/MockupOvenTest/Index.cshtml
@@ -669,10 +669,10 @@
 
         var result = $('#ArtworkTypeID').val();
         if (result != "HEAT TRANSFER") {
-            //$('.AccessoryRefno').val('').attr("disabled", "disabled");
+            $('.AccessoryRefno').val('').attr("disabled", "disabled");
         }
         else {
-            //$('.AccessoryRefno').removeAttr("disabled");
+            $('.AccessoryRefno').removeAttr("disabled");
         }
     }
 
