--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
@@ -584,7 +584,7 @@
                     tbody += "<td  style ='vertical-align: middle;' class='" + bgColor + "'><input type='text' idx='ResultSizeSpec' placeholder= '__ __/__' style ='width:7vw; height:3.5vh' class='" + bgColor + "' " + readonly + "></td>";
                 }
                 else {
-                    tbody += "<td  style ='vertical-align: middle;' class='" + bgColor + "'><input type='number' idx='ResultSizeSpec' style ='width:7vw; height:2.5vh' class='" + bgColor + "' " + readonly + "></td>";
+                    tbody += "<td  style ='vertical-align: middle;' class='" + bgColor + "'><input type='number' step='any' idx='ResultSizeSpec' style ='width:7vw; height:2.5vh' class='" + bgColor + "' " + readonly + "></td>";
                 }
 
                 tbody += "<td style ='vertical-align: middle;'><p style ='padding: 0.5vh' class='Diff'></p></td>";
