--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/CheckList.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/CheckList.cshtml
@@ -63,7 +63,7 @@
         // name, td:value, td:checkbox
         adata.push([null, 'Fabric Artwork Check List',
             [
-                ['CheckCloseShade', 'Close/Shade',@Model.CheckCloseShade],
+                ['CheckCloseShade', 'Color/Shade',@Model.CheckCloseShade],
                 ['CheckHandfeel', 'Handfeel', @Model.CheckHandfeel],
                 ['CheckAppearance', 'Appearance',@Model.CheckAppearance],
                 ['CheckPrintEmbDecorations', 'Print/Emb Decorations', @Model.CheckPrintEmbDecorations]
@@ -84,7 +84,7 @@
         adata.push([null, 'Packaging',
             [
                 ['CheckShippingMark', 'Shipping Mark', @Model.CheckShippingMark],
-                ['CheckPolytagMarketing', 'Polytag/Marketing', @Model.CheckPolytagMarketing],
+                ['CheckPolybagMarketing', 'Polybag/Marketing', @Model.CheckPolytagMarketing],
                 ['CheckColorSizeQty', 'Color/Size/Qty', @Model.CheckColorSizeQty],
                 ['CheckHangtag', 'Hangtag', @Model.CheckHangtag],
             ]
