修正Measurement 單位為CM的計算錯誤

--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
@@ -643,7 +643,7 @@
                     return;
                 }
 
-                var finval = accSubtr(standard, val);
+                var finval = accSubtr(val, standard);
                 $(this).parent().parent().children().find("p[class='Diff']").html(finval);
 
                 val = parseFloat(val);
