--- a/Quality/Quality/Areas/BulkFGT/Views/PullingTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/PullingTest/Index.cshtml
@@ -298,7 +298,7 @@
                                     <td>
                                         @Html.TextBoxFor(o => o.Detail.FabricRefno, "", new { @class = "OnlyEdit", @readonly = "readonly" })
                                     </td>
-                                    <td><h5>Accessory</h5></td>
+                                    <td><h5>Accessory Ref#</h5></td>
                                     <td>
                                         @Html.TextBoxFor(o => o.Detail.AccRefno, "", new { @class = "OnlyEdit", @readonly = "readonly" })
                                     </td>
