前端資料顯示跑版修正

--- a/Quality/Quality/Areas/BulkFGT/Views/SearchList/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/SearchList/Index.cshtml
@@ -62,6 +62,10 @@
         font-size: 1.2em;
         background-color: gray;
     }
+    .inner-scroll{
+        padding-bottom:30px;
+    }
+
 </style>
 <div class="main-content">
 
@@ -282,7 +286,7 @@
             "pageLength": 10,
             "filter": false,
             "paging": true,
-            lengthChange: false,
+            //lengthChange: false,
             //"scrollY": "49vh",
             //"scrollCollapse": true,
             //"scrollX": true,
